fix v2 overflow

--- a/locofy/src/pages/MainScreenFrame.module.css
+++ b/locofy/src/pages/MainScreenFrame.module.css
@@ -1,6 +1,5 @@
 .header,
 .mainScreenFrame {
-  overflow: hidden;
   display: flex;
 }
 .mainScreenFrame {
